--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
 
 <title>About - Joy Chetry</title>
 <meta name="description" content="Currently based in Chakan, Pune. I work with agencies, companies, startups, and people all over the world, creating rich experiences.">
-<meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+<meta name="robots" content="noindex, nofollow">
 
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
