--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
 
 <title>Contact - Joy Chetry</title>
 <meta name="description" content="Always happy to talk about working together, speaking at your event or just to catch up for a coffee. Just shoot me an email.">
-<meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+<meta name="robots" content="noindex, nofollow">
 
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
