--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <title>Joy Chetry - Web Designer & Strategist</title>
 <meta name="description" content="I am a Web Designer and Strategist from Chakan, Pune focusing on creating amazing things for great companies and organizations.">
-<meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+<meta name="robots" content="noindex, nofollow">
 
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
