--- a/playlist/index.html
+++ b/playlist/index.html
@@ -8,7 +8,7 @@
 
 <title>Playlist - Joy Chetry</title>
 <meta name="description" content="I spend a lot of time assembling Spotify playlists. Here’s some of the ones I’ve made public. Enjoy!">
-<meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+<meta name="robots" content="noindex, nofollow">
 
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
