--- a/work/index.html
+++ b/work/index.html
@@ -8,7 +8,7 @@
 
 <title>Work - Joy Chetry</title>
 <meta name="description" content="I enjoy working with companies to bring their ideas to life. I’ve been fortunate enough to work with tech companies, startups and media alike.">
-<meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+<meta name="robots" content="noindex, nofollow">
 
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
