--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -8,7 +8,7 @@
 
 <title>Privacy Policy - Joy Chetry</title>
 <meta name="description" content="Privacy is important to us and we have added this privacy page, to explain a few quick things about the site and what info we collect, which is not much at all.">
-<meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+<meta name="robots" content="noindex, nofollow">
 
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
